# TcpClientServerISO8583Protocol

./: .gitignore  CMakeLists.txt  ClientServerISO8583Protocol.sln  README.md
Client/: CMakeLists.txt  ClientMain.cpp  TcpClient.cpp  TcpClient.h  TcpClient.vcxproj  TcpClient.vcxproj.filters
Server/: CMakeLists.txt  OracleDbClient.cpp  OracleDbClient.h  ResponseCodeSettingsProvider.cpp  ResponseCodeSettingsProvider.h  ServerMain.cpp  TcpServer.cpp  TcpServer.h  TcpServer.vcxproj  TcpServer.vcxproj.filters  response_code_settings.sql
src/: ByteConversionHelper.cpp  ByteConversionHelper.h  MessageISO8583.cpp  MessageISO8583.h
test/: Run_Client_only.bat  Run_Server_And_Clients.bat  Run_Server_only.bat
test/data/: testdata.txt
